# Visualize-Preprocess-Dataset-For-ML

./: readme.md  requirements.txt
app/: main.py
backend/: .gitignore  Makefile  pyproject.toml
backend/app/: api.py  main.py
backend/app/dataset_chart/: router.py  schemas.py  service.py
backend/app/dataset_column/: router.py  schemas.py  service.py
backend/app/dataset_eda/: dependencies.py  router.py  schemas.py  service.py  ultils.py
backend/app/dataset_transfer/: router.py  schemas.py  service.py
backend/app/decision_tree/: node_class.py  router.py  schemas.py  service.py  tree_class.py
backend/app/dependencies/: dataset_action.py  math_ops.py
backend/app/feature_encoding/: router.py  schemas.py  service.py
backend/app/feature_engineering/: router.py  schemas.py
backend/app/feature_engineering/services/: exp_eval.py  sp_ops.py
backend/app/feature_imbalance/: router.py  schemas.py  service.py
backend/app/feature_selection/: library.py  routers.py  schemas.py  service.py
backend/app/feature_selection/ultils/: calculator.py
backend/app/feature_transformation/: router.py  schemas.py  service.py
backend/app/pipeline/: router.py  schemas.py  service.py
backend/app/server_stat/: router.py  schemas.py  service.py
backend/app/test/dataset-eda/: test_dependencies.py  test_router.py
backend/app/test/feature_encoding/: test_service.py
backend/app/test/feature_imbalance/: test_service.py
backend/app/test/feature_selection/: test_service.py
backend/app/test/feature_transformation/: test_service.py
frontend/: package-lock.json  package.json
(+97 files in other folders)
