[project]
name = "backend"
version = "0.1.0"
description = "none"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "none"}
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.135.3,<0.136.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "textblob (>=0.19.0,<0.20.0)",
    "umap-learn (>=0.5.11,<0.6.0)",
    "imbalanced-learn (>=0.14.1,<0.15.0)",
    "psutil (>=7.2.2,<8.0.0)"
]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.7,<0.16.0)"
]
[tool.pytest.ini_options] # mandatory section name
addopts = "-s -v" # force a command line option
pythonpath = [ # what to add to the python path
    "."
]

